# fuzzy

./: LICENSE  README.md  pyproject.toml
src/fuzzy/: cli.py  exceptions.py  models.py  strategy.py
