[tool.poetry]
name = "fuzzy"
version = "0.1.0"
description = "An API fuzzing tool, that takes in a swagger.json to generate a testing strategy."
authors = ["Axel <fuzzy@absalon.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
typer = {extras = ["all"], version = "^0.6.1"}
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pyright = "^1.1.262"
flake8 = "^4.0.1"
ipdb = "^0.13.9"
pdbpp = "^0.10.3"
pytest = "^7.1.2"
pytest-clarity = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fuzzy = "fuzzy.cli:app"
